Update README and documentation.

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -314,6 +314,22 @@
   langid = {english}
 }
 
+@article{Chapman.2001,
+  title = {{{FTIR}} Spectroscopy of Peat in and Bordering {{Scots}} Pine Woodland: Relationship with Chemical and Biological Properties},
+  shorttitle = {{{FTIR}} Spectroscopy of Peat in and Bordering {{Scots}} Pine Woodland},
+  author = {Chapman, S.J and Campbell, C.D and Fraser, A.R and Puri, G},
+  year = {2001},
+  month = jul,
+  journal = {Soil Biology and Biochemistry},
+  volume = {33},
+  number = {9},
+  pages = {1193--1200},
+  issn = {00380717},
+  doi = {10.1016/S0038-0717(01)00023-2},
+  urldate = {2021-08-18},
+  langid = {english}
+}
+
 @article{Charman.2013,
   title = {Climate-Related Changes in Peatland Carbon Accumulation during the Last Millennium},
   author = {Charman, D. J. and Beilman, D. W. and Blaauw, M. and Booth, R. K. and Brewer, S. and Chambers, F. M. and Christen, J. A. and {Gallego-Sala}, A. and Harrison, S. P. and Hughes, P. D. M. and Jackson, S. T. and Korhola, A. and Mauquoy, D. and Mitchell, F. J. G. and Prentice, I. C. and {van der Linden}, M. and De Vleeschouwer, F. and Yu, Z. C. and Alm, J. and Bauer, I. E. and Corish, Y. M. C. and Garneau, M. and Hohl, V. and Huang, Y. and Karofeld, E. and Le Roux, G. and Loisel, J. and Moschen, R. and Nichols, J. E. and Nieminen, T. M. and MacDonald, G. M. and Phadtare, N. R. and Rausch, N. and Sillasoo, {\"U}. and Swindles, G. T. and Tuittila, E.-S. and Ukonmaanaho, L. and V{\"a}liranta, M. and {van Bellen}, S. and {van Geel}, B. and Vitt, D. H. and Zhao, Y.},
@@ -608,11 +624,11 @@
 @article{Galka.2022c,
   title = {How Degraded Are the Peatland and Forest Ecosystems in the {{Bieszczady Mountains}} ({{Central Europe}})? {{An}} Assessment Using Long-Term Records},
   author = {Ga{\l}ka, Mariusz and Loisel, Julie and Knorr, Klaus-Holger and Diaconu, Andrei-Cosmin and Obremska, Milena and Teickner, Henning and Feurdean, Angelica},
-  year = {2022},
-  month = nov,
+  year = {2023},
   journal = {Land Degradation \& Development},
-  volume = {n/a},
-  number = {n/a},
+  volume = {34},
+  number = {4},
+  pages = {1246--1262},
   publisher = {John Wiley \& Sons, Ltd},
   issn = {1085-3278},
   doi = {10.1002/ldr.4530},
@@ -947,6 +963,21 @@
   langid = {english}
 }
 
+@article{Langel.2017,
+  title = {A Closer Look into the Nitrogen Blank in Elemental Analyser/Isotope Ratio Mass Spectrometry Measurements},
+  author = {Langel, Reinhard and Dyckmans, Jens},
+  year = {2017},
+  month = dec,
+  journal = {Rapid Communications in Mass Spectrometry},
+  volume = {31},
+  number = {23},
+  pages = {2051--2055},
+  issn = {0951-4198, 1097-0231},
+  doi = {10.1002/rcm.7999},
+  urldate = {2024-02-21},
+  langid = {english}
+}
+
 @article{Larina.2013,
   title = {Geochemical Differentiation in the Stratigraphy of a Peat Bed as an Indicator of Its Evolution in the {{Holocene}}},
   author = {Larina, N. S. and Larin, S. I. and Moiseenko, T. I.},
@@ -1075,6 +1106,17 @@
   issn = {08856087},
   doi = {10.1002/hyp.8252},
   urldate = {2021-08-31},
+  langid = {english}
+}
+
+@misc{Linstrom.1997,
+  title = {{{NIST Chemistry WebBook}}, {{NIST Standard Reference Database}} 69},
+  author = {Linstrom, Peter},
+  year = {1997},
+  publisher = {{National Institute of Standards and Technology}},
+  doi = {10.18434/T4D303},
+  urldate = {2025-04-01},
+  copyright = {License Information for NIST data},
   langid = {english}
 }
 
@@ -1450,6 +1492,20 @@
   doi = {10.14214/aff.7563},
   urldate = {2022-09-21},
   langid = {finnish}
+}
+
+@incollection{Parikh.2014,
+  title = {Soil Chemical Insights Provided through Vibrational Spectroscopy},
+  booktitle = {Advances in {{Agronomy}}},
+  author = {Parikh, Sanjai J. and Goyne, Keith W. and Margenot, Andrew J. and Mukome, Fungai N.D. and Calder{\'o}n, Francisco J.},
+  year = {2014},
+  volume = {126},
+  pages = {1--148},
+  publisher = {Elsevier},
+  doi = {10.1016/B978-0-12-800132-5.00001-8},
+  urldate = {2022-02-15},
+  isbn = {978-0-12-800132-5},
+  langid = {english}
 }
 
 @article{Pebesma.2016,
@@ -1847,7 +1903,7 @@
 }
 
 @misc{Teickner.2021c,
-  title = {Reproducible Research Compendium with {{R}} Code and Data for: '{{Electrochemical}} Properties of {\"U}eat Particulate Organic Matter on a Global Scale: {{Relation}} to Peat Chemistry and Degree of Decomposition'},
+  title = {Reproducible Research Compendium with {{R}} Code and Data for: '{{Electrochemical}} Properties of Peat Particulate Organic Matter on a Global Scale: {{Relation}} to Peat Chemistry and Degree of Decomposition'},
   shorttitle = {Reproducible Research Compendium with {{R}} Code and Data For},
   author = {Teickner, Henning and Gao, Chuanyu and Knorr, Klaus-Holger},
   year = {2021},
@@ -1875,7 +1931,7 @@
 }
 
 @misc{Teickner.2022d,
-  title = {{{irpeat}} 0.2.0: {{Functions}} to Analyze Mid-Nfrared Spectra of Peat Samples},
+  title = {{{irpeat}} 0.2.0: {{Functions}} to Analyze Mid-Infrared Spectra of Peat Samples},
   author = {Teickner, Henning and Hodgkins, Suzanne},
   year = {2022},
   month = oct,
@@ -1897,6 +1953,20 @@
   copyright = {Open Access},
   howpublished = {Zenodo},
   langid = {english}
+}
+
+@misc{Teickner.2025c,
+  title = {Peatland Mid Infrared Spectra Database},
+  author = {Teickner, Henning and Pebesma, Edzer and Knorr, Klaus-Holger},
+  year = {2025},
+  month = apr,
+  langid = {english}
+}
+
+@misc{Teickner.2025d,
+  title = {{{pmird}}: {{R}} Interface to the Peatland Mid Infrared Spectra Database},
+  author = {Teickner, Henning},
+  year = {2025}
 }
 
 @article{Tfaily.2014,
@@ -1968,7 +2038,6 @@
   journal = {Global Biogeochemical Cycles},
   volume = {18},
   number = {3},
-  pages = {n/a-n/a},
   issn = {08866236},
   doi = {10.1029/2003GB002154},
   urldate = {2021-04-30},
@@ -2010,6 +2079,19 @@
   doi = {10.1594/PANGAEA.942942},
   urldate = {2022-07-26},
   copyright = {Creative Commons Attribution 4.0 International},
+  langid = {english}
+}
+
+@misc{Ushey.2019,
+  title = {{{renv}}: {{Project}} Environments},
+  shorttitle = {Renv},
+  author = {Ushey, Kevin and Wickham, Hadley},
+  year = {2019},
+  month = oct,
+  pages = {1.1.4},
+  publisher = {Comprehensive R Archive Network},
+  doi = {10.32614/CRAN.package.renv},
+  urldate = {2025-04-05},
   langid = {english}
 }
 
@@ -2067,6 +2149,15 @@
   collaborator = {Wallace, William E. and Linstrom, Peter},
   copyright = {License Information for NIST data},
   langid = {english}
+}
+
+@incollection{Wallace.1997a,
+  title = {Infrared {{Spectra}}},
+  booktitle = {{{NIST Chemistry WebBook}}, {{NIST Standard Reference Database}} 69},
+  author = {Wallace, William E. and {NIST Mass Spectrometry Data Center}},
+  year = {1997},
+  publisher = {{National Institute of Standards and Technology}},
+  address = {Gaithersburg MD, 20899}
 }
 
 @article{Wallor.2018,
