--- a/vignettes/a06-Authorship-guidelines-for-pmird.Rmd
+++ b/vignettes/a06-Authorship-guidelines-for-pmird.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r packages}
+```{r packages, include=FALSE}
 library(magrittr)
 library(kableExtra)
 ```
@@ -23,13 +23,13 @@ library(kableExtra)
 
 This document is intended to foster an open dialog on authorship to the data compendium pmird. Note that there are separate [authorship guidelines for the data paper on pmird](a07-Authorship-guidelines-for-the-data-paper.html). The document is based on the authorship guidelines template document developed by @Oliver.2018.
 
-In the table below, all tasks for the succesfull development of pmird are listed. In the right column, the names of all current contributors are listed for the respective task. This document is continuously updated if new data contributors provide data and you can check if your contribution is appropriately acknowledged. 
+<!--In the table below, all tasks for the succesful development of pmird are listed. In the right column, the names of all current contributors are listed for the respective task. This document is continuously updated if new data contributors provide data and you can check if your contribution is appropriately acknowledged. 
 
-The information provided in this table are the basis for the authorship order and the description of inidividual contributions to pmird according to the guidelines listed below.
+The information provided in this table are the basis for the authorship order and the description of inidividual contributions to pmird according to the guidelines listed below.-->
 
 If you feel that you are not appropriately acknowledged or that some of the guidelines are not acceptable for you, contact henning.teickner@uni-muenster.de or open an [issue](https://github.com/henningte/pmird/issues) and describe your problem. 
 
-## Activities
+<!--## Activities
 
 ```{r activities}
 rbind( 
@@ -52,6 +52,7 @@ rbind(
   kableExtra::pack_rows("Category 4: OTHER", 7, 7)
   
 ```
+-->
 
 ## Guidelines
 
