--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1957,7 +1957,7 @@
 
 @misc{Teickner.2025c,
   title = {Peatland Mid Infrared Spectra Database},
-  author = {Teickner, Henning and Pebesma, Edzer and Knorr, Klaus-Holger},
+  author = {Teickner, Henning and Knorr, Klaus-Holger},
   year = {2025},
   month = apr,
   langid = {english}
